kubernetes/app-dp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp
          image: naveens01/client-new:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
