kubernetes/server-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  selector:
    app: server
  ports:
    - port: 5001
      targetPort: 5001
  type: LoadBalancer
