kubernetes/Networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongodb-network-policy
spec:
  podSelector:
    matchLabels:
      app: mongo
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: server
      ports:
        - protocol: TCP
          port: 5001
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: myapp
      ports:
        - protocol: TCP
          port: 3000
